k8s/frontend-deployment.yml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: frontend-service 
  labels:
    app: frontend 
    tier: ui 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      tier: ui 
  template:
    metadata:
      labels:
        app: frontend 
        tier: ui 
    spec:
      containers:
      - name: frontend
        image: order-and-inventory-management-frontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80 
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /  
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
