k8s/backend-service.yml
apiVersion: v1 
kind: Service 
metadata:
  name: backend-service 
  labels: 
    app: backend 
    tier: api 
  spec: 
    selector: 
      app: backend
      tier: api 
    ports:
    - port: 8080 
      targetPort: 8080 
      protocol: TCP 
      name: http 
    type: ClusterIP
