k8s/frontend-service.yml
apiVersion: v1 
kind: Service 
metadata:
  name: frontend-service
  labels:
    app: frontend
    tier: ui 
spec:
  selector: 
    app: frontend 
    tier: ui 
  ports:
  - port: 80 
    targetPort: 80
    protocol: TCP 
    name: http 
  type: ClusterIP
